Fixed the text on mobile version hero

--- a/msb-client/src/scss/footer.scss
+++ b/msb-client/src/scss/footer.scss
@@ -44,6 +44,7 @@ footer ul a:hover {
 	.msb-logo-footer {
 		width: 12em;
 		margin-top: 2em;
+		margin-bottom: 2em;
 	}
 
 	.contact-msb {
