--- a/msb-client/src/scss/hero-section.scss
+++ b/msb-client/src/scss/hero-section.scss
@@ -1,5 +1,5 @@
 .row {
-	gap: 2.4em;
+	gap: 1.3em;
 }
 #hero-section {
 	width: 100%;
@@ -10,12 +10,8 @@
 	background-position-x: center;
 	background-position-y: center;
 	color: $white;
-	margin-bottom: 4em;
+	margin-bottom: 3em;
 
-	.hero-text-container {
-		text-align: center;
-		background-color: rgba($main-red, 0.45);
-	}
 	.btn-cta {
 		display: flex;
 		align-items: center;
@@ -24,6 +20,32 @@
 		border: none;
 		margin: auto 0;
 		font-size: 1.2rem;
+		font-weight: 700;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+
+.hero-text-container {
+	margin-top: 2em;
+	text-align: center;
+	margin-top: 1rem;
+	padding: 0.2em 0.2em 0.4em 0.1em;
+	background-color: rgba($main-red, 0.45);
+	width: 100%;
+
+	h1 {
+		font-family: $heading-font;
+		font-weight: 700;
+		font-size: 1.375rem;
+		line-height: $line-height-title;
+	}
+	p {
+		font-family: $heading-font;
+		font-size: 1.25rem;
+		line-height: 2rem;
+		margin: 0;
 	}
 }
 
@@ -36,25 +58,6 @@
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-	// .row {
-	// 	gap: 2em;
-	// }
-
-	.hero-text-container {
-		margin-top: 2em;
-		text-align: center;
-		margin: 1rem;
-		padding: 0 4em;
-		background-color: rgba($main-red, 0.45);
-		line-height: 1.6rem;
-		width: 100%;
-		h1 {
-			font-size: 2rem;
-		}
-		p {
-			font-size: 1.5rem;
-		}
-	}
 	.btn-secondary {
 		border: none;
 		margin: auto 0;
